# platform.core.appfw.appcore-watch

./: AUTHORS  CMakeLists.txt  LICENSE  appcore-watch.pc.in  capi-appfw-watch-application.pc  project.config
doc/: appcore-watch_doc.h
include/: appcore-watch.h  watch_app.h  watch_app_efl.h
packaging/: appcore-watch.spec
src/: appcore-watch-i18n.c  appcore-watch-internal.h  appcore-watch-log.h  appcore-watch-signal.c  appcore-watch-signal.h  appcore-watch.c  watch_app_error.c  watch_app_main.c  watch_app_private.h
